--- a/ignite/pom.xml
+++ b/ignite/pom.xml
@@ -30,8 +30,8 @@
     <name>Kamino :: Blog :: Tutorial :: Ignite</name>
 
     <properties>
-        <apache.ignite.version>2.8.1</apache.ignite.version>
-        <apache.derby.version>10.15.1.3</apache.derby.version>
+        <apache.ignite.version>2.16.0</apache.ignite.version>
+        <apache.derby.version>10.17.1.0</apache.derby.version>
         <osgi.version>7.0.0</osgi.version>
         <osgi.compendium.version>7.0.0</osgi.compendium.version>
         <osgi.enterprise.version>6.0.0</osgi.enterprise.version>
@@ -83,6 +83,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
+                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
